--- a/less/navigation.less
+++ b/less/navigation.less
@@ -39,6 +39,6 @@ nav {
     img {
         max-width: 100%;
         border-radius: 5px;
-        padding-top: 10%;
+        padding-top: 90px;
     } //End img
 } //End .center
